[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "comandos"
dynamic = ["version"]
description = "Advanced visualizations for the comparison of single-cell datasets. Conceived as a SAMap add-on, but many parts do not require it."
readme = "README.md"
requires-python = ">=3.7"
license = {text = "Apache-2.0"}
authors = [{name = "Niko Papadopoulos", email = "nikolaos.papadopoulos@univie.ac.at"}]
keywords = ['nbdev', 'jupyter', 'notebook', 'python']
classifiers = ["Natural Language :: English", "Intended Audience :: Developers", "Development Status :: 3 - Alpha", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3 :: Only"]
dependencies = ['fastcore', 'jupyterlab', 'black', 'scanpy', 'seaborn', 'plotly', 'sc-sam', 'sc-samap']

[project.urls]
Repository = "https://github.com/galicae/comandos"
Documentation = "https://galicae.github.io/comandos"

[project.entry-points.nbdev]
comandos = "comandos._modidx:d"

[tool.setuptools.dynamic]
version = {attr = "comandos.__version__"}

[tool.setuptools.packages.find]
include = ["comandos"]

[tool.nbdev]
put_version_in_init = false
jupyter_hooks = true
